k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: microservices.estudo
    http:
      paths:
      - path: /funcionario
        backend:
          serviceName: funcionario
          servicePort: 8080
      - path: /departamento
        backend:
          serviceName: departamento
          servicePort: 8080
